Bug 41430 - [4.5 Regression] exception handling testsuite failures in objc++
Summary: [4.5 Regression] exception handling testsuite failures in objc++
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: objc++ (show other bugs)
Version: 4.5.0
: P4 normal
Target Milestone: 4.5.0
Assignee: Not yet assigned to anyone
URL:
Keywords: EH
Depends on:
Blocks:
 
Reported: 2009-09-21 15:20 UTC by Kaveh Ghazi
Modified: 2009-09-22 13:55 UTC (History)
1 user (show)

See Also:
Host:
Target: x86_64-unknown-linux-gnu
Build:
Known to work:
Known to fail:
Last reconfirmed: 2009-09-21 15:59:30


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kaveh Ghazi 2009-09-21 15:20:09 UTC
Somewhere between mainline revisions 151661 and 151676 I started getting new testsuite failures from objc++ as shown here:

Clean: http://gcc.gnu.org/ml/gcc-testresults/2009-09/msg01158.html
FAIL: http://gcc.gnu.org/ml/gcc-testresults/2009-09/msg01244.html

The new failures are:

FAIL: obj-c++.dg/except-1.mm execution test
FAIL: obj-c++.dg/try-catch-1.mm (internal compiler error)
FAIL: obj-c++.dg/try-catch-1.mm (test for excess errors)
FAIL: obj-c++.dg/try-catch-2.mm (test for excess errors)
FAIL: obj-c++.dg/try-catch-4.mm (internal compiler error)
FAIL: obj-c++.dg/try-catch-4.mm (test for excess errors)
Comment 1 Richard Biener 2009-09-21 15:59:30 UTC
Confirmed.
Comment 2 Richard Biener 2009-09-22 13:49:17 UTC
Subject: Bug 41430

Author: rguenth
Date: Tue Sep 22 13:49:03 2009
New Revision: 151979

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=151979
Log:
2009-09-22  Richard Guenther  <rguenther@suse.de>

	PR objc++/41430
	* Make-lang.in (objcp-lang.o): Add $(EXCEPT_H) dependency.
	* objcp-lang.c (LANG_HOOKS_EH_PERSONALITY): Define.
	(LANG_HOOKS_EH_RUNTIME_TYPE): Likewise.
	(objcxx_eh_personality): New function.

Modified:
    trunk/gcc/objcp/ChangeLog
    trunk/gcc/objcp/Make-lang.in
    trunk/gcc/objcp/objcp-lang.c

Comment 3 Richard Biener 2009-09-22 13:55:50 UTC
Fixed.