2009-09-22  Richard Guenther  <rguenther@suse.de>

PR objc++/41430
	* Make-lang.in (objcp-lang.o): Add $(EXCEPT_H) dependency.
	* objcp-lang.c (LANG_HOOKS_EH_PERSONALITY): Define.
	(LANG_HOOKS_EH_RUNTIME_TYPE): Likewise.
	(objcxx_eh_personality): New function.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@151979 138bc75d-0d04-0410-961f-82ee72b054a4